# table_dataset_ui

./: README.md  app.py  gradio_setting.py  pyproject.toml  render_pdf.py  requirements.txt  setting.py
output/: I_table_14.md  I_table_15.md  I_table_16.md  I_table_17.md  I_table_23.md
src/css/: main.css
src/js/: main.js  pdf_viewer.js
utils/: blob_controller.py
